--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,27 @@
-
-textarea{
-  padding-bottom: 30px;
-  padding-right: 20px;
-  resize: none;
-
+body{
+  font-family: Arial, Helvetica, sans-serif;
 }
-input, textarea, select{
-  background-color: rgb(250, 158, 158);
-  border: inset 1px;
-  border-radius: 15px;
-  padding-left: 10px;
+.card {
+    border: 1px solid #ddd;
+    border-radius: 20px;
+    padding: 20px 40px;
+    margin-top: 50px;
+    background: #ffdbdb;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+.card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+    transition: all 0.3s ease;
+}
+.color{
+  border-style: inset ;
+  padding: 50px;
+  margin-bottom: 20px;
+  box-shadow: 0 6px 10px rgb(44, 49, 26);
+}
+.color:hover{
+  box-shadow: 0 4px 20px rgb(44, 49, 26);
 }
 
