--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,17 @@
-body{
+body {
+  display: flex;
+  justify-content: center; /* horizontal center */
+  align-items: center;     /* vertical center */
+  min-height: 100vh;       /* take full screen height */
+  margin: 0;
+  background: #f2f2f2;
   font-family: Arial, Helvetica, sans-serif;
 }
+
 .card {
+  
+  height: 8cm;
+  width: 15cm;
     border: 1px solid #ddd;
     border-radius: 20px;
     padding: 20px 40px;
